fixed swagger jwt
